# arm-ws-v0.0.0

./: .gitmodules  _reachablews.py  generate_ik_solver.py  generate_ik_solver_v2.py  launch_cps_with_nvidia.bash  pinocchio_fk_sym.py  requirements.txt
c_code/ik_solver_acados/: Makefile  acados_ocp_20250716_100534.json  acados_ocp_20250716_100858.json  acados_ocp_20250716_101015.json  acados_sim_solver_ik_model.c  acados_sim_solver_ik_model.h  acados_solver.pxd  acados_solver_ik_model.c  acados_solver_ik_model.h  main_ik_model.c  main_sim_ik_model.c
dds_bridge/: README-CDDS-INSTALL.md
dds_bridge/cpp_plugins/: CMakeLists.txt  CMakeListsOLD.txt  IPOPT_PROFILING_README.md  PROFILING_README.md  README.md  build_ipopt_profile.sh  build_profiling.sh  mc_tester
dds_bridge/cpp_plugins/backup/: CMakeLists.txt  build_test_ik_solver_v2.bash  ik_model.h  ik_solver_v2.hpp  test_ik_solver_v2.cpp
dds_bridge/cpp_plugins/backup/include/: ik_model.h
dds_bridge/cpp_plugins/backup/src/: ik_model.cpp  ik_solver_v2.cpp  test_ik_solver_v2.cpp
dds_bridge/cpp_plugins/docs/: Doxyfile  Notes.txt  mainpage.dox
dds_bridge/cpp_plugins/docs/html/: annotated.html  classIKCostFunction-members.html  classIKCostFunction.html  classIKCostFunction__inherit__graph.map  classIKCostFunction__inherit__graph.md5  classIKModel-members.html  classIKModel.html  classIKSolver-members.html  classIKSolver.html  classIKSolverCeres-members.html  classIKSolverCeres.html  classIKSolverWithRWS.html  classMotorController-members.html  classRobotModel.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals_type.html  hierarchy.html  ik__model_8h_source.html  ik__solver_8h_source.html  ik__solver__w__rws_8cpp.html  ik__solver__w__rws_8cpp__incl.md5  ik__solver__w__rws_8hpp.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherits.html  menudata.js  reachable__workspace__generator_8h__dep__incl.md5  (+3 more)
dds_bridge/cpp_plugins/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_5.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  (+1 more)
dds_bridge/cpp_plugins/docs/latex/: annotated.tex  classIKCostFunction.tex  classIKCostFunction__coll__graph.md5  classIKModel.tex  classIKSolver.tex  classIKSolverCeres.tex  classIKSolverWithRWS.tex  classMotorController.tex  files.tex  hierarchy.tex  ik__solver__w__rws_8cpp.tex  ik__solver__w__rws_8hpp__incl.md5  index.tex  reachable__workspace__generator_8cpp__incl.md5  reachable__workspace__generator_8h.tex  reachable__workspace__generator_8h__dep__incl.md5  refman.tex  structNearestNeighbor__coll__graph.md5  workspace__types_8h.tex  workspace__types_8h__dep__incl.md5
dds_bridge/cpp_plugins/idl/: arm_msgs.idl
dds_bridge/cpp_plugins/include/: cps_link.h  ik_model.h  ik_solver.h  ik_solver_v2.hpp  ik_solver_w_rws.hpp  motor_controller.h  planner_v0.hpp  reachable_workspace_generator.h  robot_model.h  workspace_types.h
dds_bridge/cpp_plugins/src/: cps_link.cpp  example_workspace_generator.cpp  ik_model.cpp  ik_solver.cpp  ik_solver_sub.cpp  ik_solver_v2.cpp  ik_solver_v3.cpp  ik_solver_w_rws.cpp  ik_solver_w_rws_dev.cpp  ik_sub.cpp  iktestdata.txt  ipopt_detailed_profile.cpp  ipopt_profile_test.cpp  ipopt_simple_profile.cpp  mc_tester.cpp  motor_controller.cpp  planner_v0.cpp  profile_example.cpp  reachable_workspace.cpp  reachable_workspace_generator.cpp  robot_model.cpp  test_cps_link.cpp  test_ik_model.cpp  test_ik_solver.cpp  test_ik_solver_v2.cpp  test_ik_solver_w_rws.cpp  test_motor_controller.cpp  test_planner.cpp
dds_bridge/cpp_plugins/trash/: ik_solver_v2_profiled.cpp  reachable_workspace.cpp  reachable_workspace_optimized.cpp  test_ik_model.cpp  test_ik_solver.cpp
dds_bridge/ros_plugins/: CMakeLists.txt  package.xml
dds_bridge/ros_plugins/idl/: arm_msgs.idl
dds_bridge/ros_plugins/src/: ros_dds_bridge.cpp
docs/: annotated.html  classIKModel-members.html  classIKModel.html  classIKSolverWithRWS-members.html  classReachableWorkspaceGenerator-members.html  classRobotModel-members.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  functions.html  globals.html  ik__solver__w__rws_8hpp__dep__incl.map  ik__solver__w__rws_8hpp_source.html  menudata.js  motor__controller_8h_source.html  reachable__workspace__generator_8cpp.html  reachable__workspace__generator_8cpp__incl.map  reachable__workspace__generator_8cpp__incl.md5  reachable__workspace__generator_8h.html  reachable__workspace__generator_8h__dep__incl.map  reachable__workspace__generator_8h__incl.map  reachable__workspace__generator_8h__incl.md5  robot__model_8h_source.html  structJointConfigHash.html  structNearestNeighbor-members.html  structNearestNeighbor__coll__graph.map  structVoxelGrid.html  structWorkspaceAdaptor-members.html  structWorkspacePoint.html  update_docs.sh  workspace__types_8h.html  workspace__types_8h__dep__incl.map  workspace__types_8h__dep__incl.md5  workspace__types_8h__incl.map  workspace__types_8h__incl.md5  workspace__types_8h_source.html
docs/html/: annotated.html  classMotorController.html  classReachableWorkspaceGenerator.html  classes.html  dir_000001_000000.html  functions_vars.html  graph_legend.html  ik__solver__w__rws_8cpp__incl.map  ik__solver__w__rws_8hpp__dep__incl.md5  ik__solver__w__rws_8hpp__incl.map  ik__solver__w__rws_8hpp__incl.md5  index.html  reachable__workspace__generator_8h_source.html  structJointConfigEqual-members.html  (+4 more)
(+92 files in other folders)
